# MSNEAT

./: .gitignore  CMakeLists.txt  MSNEAT.sln  readme.txt
MSNEAT/: Board.h  CellSurface.h  EasyMSSimulation.h  MSNEAT.vcxproj  MSNEAT.vcxproj.filters  Simulation.h  definitions.h  main.cpp
MSNEAT/x64/Debug/: MSNEAT.exe.recipe  MSNEAT.ilk  vc143.idb
MSNEAT/x64/Debug/MSNEAT.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  MSNEAT.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/: CMakeLists.txt  main.cpp
src/MS/: Board.h  CMakeLists.txt  CellSurface.h  main.cpp
src/MSNEAT/: CMakeLists.txt  EasyMSSimulation.cpp  EasyMSSimulation.h
src/NEAT/: CMakeLists.txt  ConnectionSpecialization.h  InnovationManager.h  Network.h  PerformanceData.h  Population.h  Random.cpp  Random.h  Simulation.h  Species.h  concepts.h  constants.h  definitions.h  hashes.h  types.h  util.h
